# vertices

./: Cargo.toml  README.md
src/: document.rs  lib.rs  text_chunking.rs
src/commons/: enums.rs  mod.rs  models.rs
src/vector_stores/: mod.rs  qdrant.rs
