[package]
name = "vertices"
version = "0.1.0"
edition = "2024"
description = "A Rust library for building vector-based content management systems"
authors =  ["Xinyu Bao <baoxinyuworks@163.com>"]
readme = "README.md"
repository = "https://github.com/aspadax/vertices"
license = "MIT"

[dependencies]
